# lua-cmake

./: CMakeLists.txt  luaConfig.cmake
cmake/: luaConfig.cmake.in
